fix few issues with dark mode

--- a/src/styles/pages/dashboard.less
+++ b/src/styles/pages/dashboard.less
@@ -434,7 +434,6 @@
 .@{class-prefix}-blue-cyan-gradient {
   .corner-left-gradient(#45d1e6, #4363c6);
 }
-
 .@{class-prefix}-cyan-green-gradient {
   .corner-left-gradient(#40CAC1, #219DD0);
 }
@@ -442,6 +441,19 @@
   .corner-left-gradient(#d2449d, #564093);
 }
 .@{class-prefix}-pink-orange-corner-gradient {
+  .corner-left-gradient(#fc6bab, #fd826b);
+}
+
+.@{class-prefix}-bg-blue-cyan-gradient {
+  .corner-left-gradient(#45d1e6, #4363c6);
+}
+.@{class-prefix}-bg-cyan-green-gradient {
+  .corner-left-gradient(#40CAC1, #219DD0);
+}
+.@{class-prefix}-bg-pink-purple-corner-gradient {
+  .corner-left-gradient(#d2449d, #564093);
+}
+.@{class-prefix}-bg-pink-orange-corner-gradient {
   .corner-left-gradient(#fc6bab, #fd826b);
 }
 
